--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,12 @@
        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.35</version>
-       </dependency>
+            </dependency>
+            
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
        
        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
