--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,6 @@ mybatis.config-locations=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.momo.springbootdemo.bean
 
-#spring.datasource.url=jdbc:mysql:/127.0.0.1:3306/test
-#spring.datasource.username=root
-#spring.datasource.password=yu328ting8MYS
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.max-idle=10
-#spring.datasource.max-wait=10000
-#spring.datasource.min-idle=5
-#spring.datasource.initial-size=5
-
 server.port=8080
 server.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
@@ -19,3 +10,7 @@ spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.username = root
 spring.datasource.password = yu328ting8MYS
+
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
